<?xml version="1.0" encoding="utf-8"?>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent" >
	 
	  <!-- Header aligned to top -->
	  <RelativeLayout
	    android:id="@+id/header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	    android:background="@drawable/header"
	    android:gravity="center" >
	 
	    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/welcome" 
        android:textColor="#780000"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />
		
	  </RelativeLayout>
	 
	  <!-- Footer aligned to bottom -->
      <RelativeLayout
	    android:id="@+id/footer"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/footer"
	    android:gravity="center" >
	 
	    <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_margin="5dp"
	      android:text="Copyright © 2014-2015 MoodSense"
     	  android:textColor="#000"
	      android:textSize="10sp" />
	  </RelativeLayout>
	 
	  <!-- Scrollable Item below header and above footer -->
	  <ScrollView
	    android:id="@+id/scrollableContents"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@id/footer"
	    android:background="#005"
	    android:layout_below="@id/header" >
	 
    <LinearLayout
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:gravity="center_horizontal"
	      android:orientation="vertical"
	      android:background="@drawable/middleback" >
	        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/about_app1" 
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#000000"/>

    <TextView
				android:id="@+id/textView3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="22sp"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:textColor="#000000"
				android:text="@string/about_app2" />

      
    <Button     android:id="@+id/authenticate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:textStyle="bold"
	            android:layout_marginTop="30dp"
	            android:text="@string/twitter_button"/>
    </LinearLayout>
	   
	 
	  </ScrollView>
	 
</RelativeLayout>