<?xml version="1.0" encoding="utf-8"?>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:tools="http://schemas.android.com/tools"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent" >
	 
	  <!-- Header aligned to top -->
	  <RelativeLayout
	    android:id="@+id/header"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	    android:background="@drawable/header"
	    android:gravity="center" >
	 
	    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/welcome" 
        android:textColor="#780000"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />
		
	  </RelativeLayout>
	 
	  <!-- Footer aligned to bottom -->
      <RelativeLayout
	    android:id="@+id/footer"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/footer"
	    android:gravity="center" >
	 
	    <TextView
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_margin="5dp"
	      android:text="Copyright © 2014-2015 MoodSense"
     	  android:textColor="#000"
	      android:textSize="10sp" />
	  </RelativeLayout>
	 
	  <!-- Scrollable Item below header and above footer -->
	  <ScrollView
	    android:id="@+id/scrollableContents"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_above="@id/footer"
	    android:background="#005"
	    android:layout_below="@id/header" >
	 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/middleback"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="200dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/about"
            android:textColor="#000000"
            android:textSize="16sp" />
		<TableLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:stretchColumns="1"
		    android:layout_gravity="center" >
   			 <TableRow>
   			     
        		<TextView
            android:id="@+id/love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
			android:layout_marginBottom="5dp"
			android:layout_marginLeft="10dp"
	        android:layout_gravity="center"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="love" />
         <ImageView
            android:id="@+id/lovedimg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/loved"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
             />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/joy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="joy" />
           <ImageView
            android:id="@+id/joyimg"
             android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
            android:src="@drawable/happy"
             />
    </TableRow>
    <TableRow>
     <TextView
            android:id="@+id/surprise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="surprise" />
        <ImageView
            android:id="@+id/surpriseimg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
            android:src="@drawable/surprised"
            />
        </TableRow>
        <TableRow>
        <TextView
            android:id="@+id/anger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="anger" />
        <ImageView
            android:id="@+id/angerimg"
		    android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/angry"
           android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"/>
        </TableRow>
        <TableRow>
        <TextView
            android:id="@+id/envy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="envy" />
        <ImageView
            android:id="@+id/envyimg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/envy"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"/>
        </TableRow>
        <TableRow>
        <TextView
            android:id="@+id/sad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="sad" />
        <ImageView
            android:id="@+id/sadimg"
 			android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sad"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"/>
        </TableRow>
        <TableRow>
        <TextView
            android:id="@+id/fear"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="fear" />
        <ImageView
            android:id="@+id/fearimg"
 			android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/fear"
           android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"/>
        </TableRow>
       <TableRow >
           <TextView
            android:id="@+id/neutral"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
            android:text="neutral" />
        <ImageView
            android:id="@+id/neutralimg"
 			android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/neutral"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp" 
            android:layout_gravity="center"
	        android:layout_marginLeft="10dp"/>
        </TableRow>
</TableLayout>
  <TextView
            android:id="@+id/about_more"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
	        android:layout_gravity="center"
            android:text="@string/about_more" />
  <TextView
            android:id="@+id/about_note"
             android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
	        android:layout_marginLeft="10dp"
	        android:layout_marginRight="10dp"
	        android:textColor="#000000"
            android:textSize="16sp"
	        android:layout_gravity="center"
            android:text="@string/note" />
  
    </LinearLayout>
	 
	  </ScrollView>
	 
</RelativeLayout>